<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.n.enviarparametros.MainActivity">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textSize="@dimen/tamañoletra"
        android:id="@+id/edtnombre"
        android:textStyle="bold"
        android:hint="@string/nombredepersona"

        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:hint="@string/telefono"
        android:layout_below="@+id/layout1"
        android:id="@+id/edttelefono"
        android:textSize="@dimen/tamañoletra"
        android:textStyle="bold"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edttelefono"
        android:id="@+id/edtemail"
        android:hint="@string/email"
        android:textSize="@dimen/tamañoletra"
        android:textStyle="bold"
        android:inputType="textEmailAddress"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtdescripcion"
        android:inputType="textLongMessage"
        android:layout_below="@+id/edtemail"
        android:textStyle="bold"
        android:hint="@string/descripciondelcontacto"
        android:textSize="@dimen/tamañoletra" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnsiguiente"
        android:text="@string/botonsiguiente"
        android:layout_below="@+id/edtdescripcion"

        />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtnombre"
        android:id="@+id/layout1"
        android:layout_margin="@dimen/magernFecha"
        >

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dtpfecha"




            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aceptarfecha"
            android:textStyle="bold"
            android:id="@+id/btnaceptarfecha"
            android:onClick="mostrarcalendario"
            android:layout_marginLeft="110dp"/>



    </RelativeLayout>



</RelativeLayout>
