<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.n.enviarparametros.DatosRecibidos">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutnombre"
        android:layout_below="@+id/tvconfirmardatos"
        android:layout_marginTop="30dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombreingresado"
            android:id="@+id/tnnombrerecivido"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvnombre"
            android:layout_marginLeft="@dimen/magernFecha"


            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/layouttelefono"
        android:layout_below="@+id/layoutfecha"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvmostrartelefono"
            android:text="@string/telefonoingresado"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvtelefono"
            android:layout_marginLeft="@dimen/magernFecha"

            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/layoutemail"
        android:layout_below="@+id/layouttelefono"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mostraemail"
            android:text="@string/emailingresado"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvemail"
            android:layout_marginLeft="@dimen/magernFecha"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutemail"
        android:id="@+id/layoutdescripcion"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvdescripcioningreso"
            android:textStyle="bold"
            android:text="@string/descripcioningresada"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvdescripcion"
            android:layout_marginLeft="@dimen/magernFecha"
            />


    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvconfirmardatos"
        android:text="@string/datosconfirmados"
        android:textSize="@dimen/tamañoletra"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/titulocentrado"/>



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnmodificar"
        android:id="@+id/btnmodificardatos"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutnombre"
        android:id="@+id/layoutfecha"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fechaingresada"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvfechanacimiento"
            android:layout_marginLeft="@dimen/magernFecha"

        />

    </LinearLayout>


</RelativeLayout>
